--- a/example/windows/runner/Runner.rc
+++ b/example/windows/runner/Runner.rc
@@ -89,13 +89,13 @@ BEGIN
     BEGIN
         BLOCK "040904e4"
         BEGIN
-            VALUE "CompanyName", "com.example" "\0"
-            VALUE "FileDescription", "example" "\0"
+            VALUE "CompanyName", "biz.cosee.ruler_scale_picker_example" "\0"
+            VALUE "FileDescription", "ruler_scale_picker_example" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
-            VALUE "InternalName", "example" "\0"
-            VALUE "LegalCopyright", "Copyright (C) 2023 com.example. All rights reserved." "\0"
-            VALUE "OriginalFilename", "example.exe" "\0"
-            VALUE "ProductName", "example" "\0"
+            VALUE "InternalName", "ruler_scale_picker_example" "\0"
+            VALUE "LegalCopyright", "Copyright 2023 cosee GmbH.. All rights reserved." "\0"
+            VALUE "OriginalFilename", "ruler_scale_picker_example.exe" "\0"
+            VALUE "ProductName", "ruler_scale_picker_example" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
         END
     END
