--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -7,7 +7,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - uses: subosito/flutter-action@v2.12.0
+      - uses: asdf-vm/actions/install@v2
 
       - name: Cache dependencies
         uses: actions/cache@v3
@@ -38,7 +38,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - uses: subosito/flutter-action@v2.12.0
+      - uses: asdf-vm/actions/install@v2
 
       - name: Install WebP
         run: |
@@ -48,8 +48,7 @@ jobs:
         uses: actions/cache@v3
         id: cache
         with:
-          path: |
-            .dart_tool/
+          path: .dart_tool/
           key: ${{ runner.os }}-dependencies-${{ hashFiles('**/pubspec.lock') }}
       - name: Install Dependencies
         run: |
