--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -1,1 +1,5 @@
-include: package:cosee_lints/analysis_options_package.yaml
+include: package:cosee_lints/analysis_options.yaml
+
+dart_code_linter:
+  extends:
+    - package:cosee_lints/metrics.yaml
