--- a/example/analysis_options.yaml
+++ b/example/analysis_options.yaml
@@ -1,3 +1,5 @@
-dart_code_metrics:
+include: package:cosee_lints/analysis_options.yaml
+
+dart_code_linter:
   extends:
     - package:cosee_lints/metrics.yaml
