--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,5 +23,5 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   cosee_lints: ^0.6.0
-  dart_code_metrics: ^5.7.6
+  dart_code_linter: ^1.1.3
   golden_toolkit: ^0.15.0
