--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -10,18 +10,23 @@ jobs:
 
       - name: Cache asdf
         uses: actions/cache@v4
-        id: asdf_cache
         with:
           path: ~/.asdf/
-          key: ${{ runner.os }}-${{ hashFiles('**/.tool-versions') }}
-      - uses: asdf-vm/actions/install@v3
+          key: ${{ runner.os }}-asdf-${{ hashFiles('.tool-versions') }}
+          restore-keys: ${{ runner.os }}-asdf-
+      - name: Install asdf
+        uses: asdf-vm/actions/install@v3
+        # See https://github.com/asdf-vm/actions/issues/445
+        if: steps.cache-asdf.outputs.cache-hit != 'true'
 
       - name: Cache flutter dependencies
         uses: actions/cache@v4
-        id: flutter_cache
         with:
-          path: .dart_tool/
-          key: ${{ runner.os }}-${{ hashFiles('**/pubspec.lock') }}
+          path: |
+            .dart_tool/
+            ~/.pub-cache/
+          key: ${{ runner.os }}-flutter-${{ hashFiles('example/pubspec.lock') }}
+          restore-keys: ${{ runner.os }}-flutter-
       - name: Install dependencies
         run: flutter pub get
 
@@ -45,13 +50,17 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+
       - name: Cache asdf
         uses: actions/cache@v4
-        id: asdf_cache
         with:
           path: ~/.asdf/
-          key: ${{ runner.os }}-${{ hashFiles('**/.tool-versions') }}
-      - uses: asdf-vm/actions/install@v3
+          key: ${{ runner.os }}-asdf-${{ hashFiles('.tool-versions') }}
+          restore-keys: ${{ runner.os }}-asdf-
+      - name: Install asdf
+        uses: asdf-vm/actions/install@v3
+        # See https://github.com/asdf-vm/actions/issues/445
+        if: steps.cache-asdf.outputs.cache-hit != 'true'
 
       - name: Install WebP
         run: |
@@ -59,12 +68,12 @@ jobs:
           sudo apt install webp
       - name: Cache flutter dependencies
         uses: actions/cache@v4
-        id: flutter_cache
         with:
           path: |
             .dart_tool/
             ~/.pub-cache/
-          key: ${{ runner.os }}-${{ hashFiles('**/pubspec.lock') }}
+          key: ${{ runner.os }}-flutter-${{ hashFiles('example/pubspec.lock') }}
+          restore-keys: ${{ runner.os }}-flutter-
       - name: Install Dependencies
         run: |
           flutter pub get
